Continue development of the main client api

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.hateoas:spring-hateoas:0.25.1.RELEASE'
+	api 'org.springframework.hateoas:spring-hateoas:0.25.1.RELEASE'
 	compileOnly 'org.projectlombok:lombok:1.18.6'
 	annotationProcessor 'org.projectlombok:lombok:1.18.6'
 }
