--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,17 @@ repositories {
 	mavenCentral()
 }
 
+test {
+	useJUnitPlatform()
+}
+
 dependencies {
 	api 'org.springframework.hateoas:spring-hateoas:0.25.1.RELEASE'
 	compileOnly 'org.projectlombok:lombok:1.18.6'
 	annotationProcessor 'org.projectlombok:lombok:1.18.6'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.4.0'
+	testImplementation 'org.exparity:hamcrest-date:2.0.4'
+	testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
+	testCompileOnly 'org.projectlombok:lombok:1.18.6'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.6'
 }
