--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,16 @@ test {
 
 dependencies {
 	api 'org.springframework.hateoas:spring-hateoas:0.25.1.RELEASE'
+	implementation 'org.springframework:spring-web:5.1.5.RELEASE'
+	implementation 'commons-validator:commons-validator:1.4.0'
+	implementation 'ch.qos.logback:logback-classic:1.2.3'
+	implementation 'ch.qos.logback:logback-core:1.2.3'
+
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+
 	compileOnly 'org.projectlombok:lombok:1.18.6'
 	annotationProcessor 'org.projectlombok:lombok:1.18.6'
+
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.4.0'
 	testImplementation 'org.exparity:hamcrest-date:2.0.4'
 	testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
