Continue error handling development

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	api 'org.springframework.hateoas:spring-hateoas:0.25.1.RELEASE'
 	implementation 'org.springframework:spring-web:5.1.5.RELEASE'
 	implementation 'commons-validator:commons-validator:1.4.0'
+	implementation 'commons-io:commons-io:2.6'
 	implementation 'ch.qos.logback:logback-classic:1.2.3'
 	implementation 'ch.qos.logback:logback-core:1.2.3'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
