--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	testImplementation 'org.exparity:hamcrest-date:2.0.4'
 	testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
 	testImplementation 'org.apache.commons:commons-lang3:3.8.1'
+	testImplementation 'org.mock-server:mockserver-netty:5.5.1'
 	testCompileOnly 'org.projectlombok:lombok:1.18.6'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.6'
 }
