--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
 	testImplementation 'org.apache.commons:commons-lang3:3.8.1'
 	testImplementation 'org.mock-server:mockserver-netty:5.5.1'
+	testImplementation 'com.github.spullara.mustache.java:compiler:0.9.6'
 	testCompileOnly 'org.projectlombok:lombok:1.18.6'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.6'
 }
