--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java-library'
+	id "io.spring.dependency-management" version "1.0.7.RELEASE"
 }
 
 group = 'ru.icbcom.aistdap'
@@ -14,14 +15,20 @@ test {
 	useJUnitPlatform()
 }
 
+dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.boot:spring-boot-dependencies:2.1.3.RELEASE'
+	}
+}
+
 dependencies {
-	api 'org.springframework.hateoas:spring-hateoas:0.25.1.RELEASE'
-	api 'org.springframework:spring-web:5.1.5.RELEASE'
+	api 'org.springframework.hateoas:spring-hateoas'
+	api 'org.springframework:spring-web'
 	implementation 'commons-validator:commons-validator:1.4.0'
 	implementation 'commons-io:commons-io:2.6'
-	implementation 'ch.qos.logback:logback-classic:1.2.3'
-	implementation 'ch.qos.logback:logback-core:1.2.3'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+	implementation 'ch.qos.logback:logback-classic'
+	implementation 'ch.qos.logback:logback-core'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8'
 	compileOnly 'org.projectlombok:lombok:1.18.6'
 	annotationProcessor 'org.projectlombok:lombok:1.18.6'
