--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ group = 'ru.icbcom.aistdap'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = "UTF-8"
+
 repositories {
 	mavenCentral()
 }
@@ -17,30 +20,40 @@ test {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.boot:spring-boot-dependencies:2.1.3.RELEASE'
+		mavenBom ('org.springframework.boot:spring-boot-dependencies:2.1.3.RELEASE') {
+			bomProperty 'junit-jupiter.version', '5.4.1'
+		}
+	}
+	dependencies {
+		dependency 'commons-validator:commons-validator:1.4.0'
+		dependency 'commons-io:commons-io:2.6'
+		dependency 'org.exparity:hamcrest-date:2.0.4'
+		dependency 'org.mock-server:mockserver-netty:5.5.1'
+		dependency 'com.github.spullara.mustache.java:compiler:0.9.6'
 	}
 }
 
 dependencies {
 	api 'org.springframework.hateoas:spring-hateoas'
 	api 'org.springframework:spring-web'
-	implementation 'commons-validator:commons-validator:1.4.0'
+	implementation 'commons-validator:commons-validator'
 	implementation 'commons-io:commons-io:2.6'
 	implementation 'ch.qos.logback:logback-classic'
 	implementation 'ch.qos.logback:logback-core'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
-	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8'
-	compileOnly 'org.projectlombok:lombok:1.18.6'
-	annotationProcessor 'org.projectlombok:lombok:1.18.6'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 
-	testImplementation 'org.skyscreamer:jsonassert:1.5.0'
-	testImplementation 'org.junit.jupiter:junit-jupiter:5.4.0'
-	testImplementation 'org.hamcrest:hamcrest-all:1.3'
-	testImplementation 'org.exparity:hamcrest-date:2.0.4'
-	testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
-	testImplementation 'org.apache.commons:commons-lang3:3.8.1'
-	testImplementation 'org.mock-server:mockserver-netty:5.5.1'
-	testImplementation 'com.github.spullara.mustache.java:compiler:0.9.6'
-	testCompileOnly 'org.projectlombok:lombok:1.18.6'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.6'
+	testImplementation 'org.skyscreamer:jsonassert'
+	testImplementation 'org.junit.jupiter:junit-jupiter'
+	testImplementation 'org.hamcrest:hamcrest-core'
+	testImplementation 'org.hamcrest:hamcrest-library'
+	testImplementation 'org.exparity:hamcrest-date'
+	testImplementation 'org.mockito:mockito-junit-jupiter'
+	testImplementation 'org.apache.commons:commons-lang3'
+	testImplementation 'org.mock-server:mockserver-netty'
+	testImplementation 'com.github.spullara.mustache.java:compiler'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok:'
 }
