--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
 	id 'java-library'
+	id 'maven-publish'
 	id "io.spring.dependency-management" version "1.0.7.RELEASE"
 }
 
 group = 'ru.icbcom.aistdap'
-version = '0.0.1-SNAPSHOT'
+version = '1.0'
 sourceCompatibility = '11'
 
 compileJava.options.encoding = 'UTF-8'
@@ -12,6 +13,14 @@ compileTestJava.options.encoding = "UTF-8"
 
 repositories {
 	mavenCentral()
+}
+
+publishing {
+	publications {
+		maven(MavenPublication) {
+			from components.java
+		}
+	}
 }
 
 test {
@@ -27,9 +36,6 @@ dependencyManagement {
 	dependencies {
 		dependency 'commons-validator:commons-validator:1.4.0'
 		dependency 'commons-io:commons-io:2.6'
-		dependency 'org.exparity:hamcrest-date:2.0.4'
-		dependency 'org.mock-server:mockserver-netty:5.5.1'
-		dependency 'com.github.spullara.mustache.java:compiler:0.9.6'
 	}
 }
 
@@ -37,7 +43,7 @@ dependencies {
 	api 'org.springframework.hateoas:spring-hateoas'
 	api 'org.springframework:spring-web'
 	implementation 'commons-validator:commons-validator'
-	implementation 'commons-io:commons-io:2.6'
+	implementation 'commons-io:commons-io'
 	implementation 'ch.qos.logback:logback-classic'
 	implementation 'ch.qos.logback:logback-core'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
@@ -49,11 +55,11 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter'
 	testImplementation 'org.hamcrest:hamcrest-core'
 	testImplementation 'org.hamcrest:hamcrest-library'
-	testImplementation 'org.exparity:hamcrest-date'
+	testImplementation 'org.exparity:hamcrest-date:2.0.4'
 	testImplementation 'org.mockito:mockito-junit-jupiter'
 	testImplementation 'org.apache.commons:commons-lang3'
-	testImplementation 'org.mock-server:mockserver-netty'
-	testImplementation 'com.github.spullara.mustache.java:compiler'
+	testImplementation 'org.mock-server:mockserver-netty:5.5.1'
+	testImplementation 'com.github.spullara.mustache.java:compiler:0.9.6'
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok:'
 }
