--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,21 @@ sourceCompatibility = '11'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = "UTF-8"
+javadoc.options.encoding = "UTF-8"
 
 repositories {
 	mavenCentral()
+}
+
+
+task sourcesJar(type: Jar) {
+	classifier = 'sources'
+	from sourceSets.main.allJava
+}
+
+task javadocJar(type: Jar) {
+	classifier = 'javadoc'
+	from javadoc.destinationDir
 }
 
 publishing {
