--- a/build.gradle
+++ b/build.gradle
@@ -16,21 +16,16 @@ repositories {
 	mavenCentral()
 }
 
-
 task sourcesJar(type: Jar) {
 	classifier = 'sources'
 	from sourceSets.main.allJava
-}
-
-task javadocJar(type: Jar) {
-	classifier = 'javadoc'
-	from javadoc.destinationDir
 }
 
 publishing {
 	publications {
 		maven(MavenPublication) {
 			from components.java
+			artifact sourcesJar
 		}
 	}
 }
