Configure maven repositories in build.gradle configuration

--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,17 @@ publishing {
 			}
 		}
 	}
+	repositories {
+		maven {
+			def releasesRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
+			def snapshotsRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+			url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+			credentials {
+				username = ossrhUsername
+				password = ossrhPassword
+			}
+		}
+	}
 }
 
 signing {
